# PIP-Organization-Chart-From-Grist

./: .gitignore  README.md  pyproject.toml
 from-promt/grist-org-visualizer/: pyproject.toml
 from-promt/grist-org-visualizer-gpt/: README.md
 from-promt/grist-org-visualizer-gpt/data/: example_empty.grist
 from-promt/grist-org-visualizer-gpt/src/: analytics.py  api_client.py  drawio_generator.py  layout_engine.py  readme_generator.py
 from-promt/grist-org-visualizer/src/: __init__.py  analytics.py  cli.py  config_checker.py  grist_loader.py  ppt_generator.py  rules.py
config/: mapping.yml
data/: template.ppt.pptx
grist-org-visualizer/: README.md  test_demo.py
grist-org-visualizer-gpt/: .gitignore  README.md  pyproject.toml
grist-org-visualizer-gpt/config/: example.env
grist-org-visualizer-gpt/src/: cli.py  config_checker.py  model_builder.py  report_generator.py
grist-org-visualizer/config/: example.env  mapping.yml
grist-org-visualizer/data/: example_empty.grist
grist-org-visualizer/output/: README_generated.md  multi_affectations.csv  orgchart.drawio  run_summary.md  synthesis.md
grist-org-visualizer/src/: api_client.py  drawio_generator.py  layout_engine.py  model_builder.py  readme_generator.py  report_generator.py
scripts/: setup_grist_env.sh  test_llm_api.py
src/: analytics.py  cli.py  config_checker.py  drawio_generator.py  excel_generator.py  grist_loader.py  layout_engine.py  model_builder.py  ppt_generator.py  readme_generator.py  ref_utils.py  report_generator.py  rules.py  team_mission_summarizer.py
